--- a/70_pf/tourist2/css/header.css
+++ b/70_pf/tourist2/css/header.css
@@ -37,6 +37,8 @@ header {
     width: 100%;
     top: 100px;
     left: 0;
+    height: 50px;
+    opacity: 0;
     background: rgba(0, 0, 0, 0.5);
 }
 
