--- a/70_pf/tourist2/css/footer.css
+++ b/70_pf/tourist2/css/footer.css
@@ -1,52 +1,48 @@
 @charset "utf-8";
 @import url(common.css);
 
-/* 푸터 */
-
+/* footer */
 footer {
     border-top: 1px solid #ddd;
     height: 160px;
     font-size: 13px;
 }
-
 footer .box_inner {
     display: flex;
     justify-content: space-between;
     padding: 25px 0 36px 0;
 }
-
 footer h3 {
     font-size: 14px;
     font-weight: normal;
 }
-
-.foot_list {
+/* 하단 메뉴 */
+ul.foot_list {
     display: flex;
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 25px;
 }
-
 .foot_list li:first-of-type::after {
-    content: "|";
+    content: '|';
     padding: 0 10px;
 }
-
 .snslink {
     display: flex;
 }
-
 .snslink a {
-    display: inline-block;
-    background: no-repeat 0 0/50px 50px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 24px;
+    background: no-repeat 0 0/cover;
 }
-
 .snslink li:nth-of-type(1) a {
-    background-image: url("http://picsum.photos/id/12/50/50");
+    background-image: url("https://picsum.photos/id/401/50/50");
 }
 .snslink li:nth-of-type(2) a {
-    background-image: url("http://picsum.photos/id/14/50/50");
+    background-image: url("https://picsum.photos/id/404/50/50");
 }
 .snslink li:nth-of-type(3) a {
-    background-image: url("http://picsum.photos/id/10/50/50");
+    background-image: url("https://picsum.photos/id/406/50/50");
 }
