--- a/70_pf/tourist2/css/header.css
+++ b/70_pf/tourist2/css/header.css
@@ -1,87 +1,19 @@
 @charset "utf-8";
 @import url(common.css);
 
-/* 헤더 */
+/* header */
 header {
     z-index: 9999;
     position: absolute;
     width: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0,0,0,0.5);
     padding: 30px;
 }
-
-.box_inner {
-    display: flex;
-    width: 1050px;
-    margin: 0 auto;
-}
-
-.util {
-    text-align: right;
-}
-
 .logo {
     width: 270px;
     height: 40px;
-    border: 1px solid sandybrown;
+    border: 1px solid #fff;
 }
 
-.gnb {
-    z-index: 2;
-    position: absolute;
-}
 
-.nav_bg {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    top: 100px;
-    left: 0;
-    height: 50px;
-    opacity: 0;
-    background: rgba(0, 0, 0, 0.5);
-}
 
-.main {
-    display: flex;
-    text-align: right;
-}
-
-.main > li {
-    display: inline-block;
-    vertical-align: top;
-}
-
-.main > li > a {
-    background: red;
-    display: block;
-    margin-bottom: 1px;
-    width: 160px;
-}
-
-.main > li > a:hover {
-    background: blue;
-    color: #fff;
-}
-
-.main>li>a:hover .sub {
-    height: 210px;
-}
-
-.sub {
-    position: absolute;
-    top: 40px;
-    display: none;
-    height: 210px;
-    line-height: 30px;
-    padding-top: 10px;
-}
-.sub a {
-    display: block;
-    color: #fff;
-}
-
-.sub a:hover {
-    background: #fff;
-    color: #333;
-}
