--- a/70_pf/tourist2/css/main.css
+++ b/70_pf/tourist2/css/main.css
@@ -1,103 +1,69 @@
 @charset "utf-8";
 @import url(common.css);
 
-
-/* 헤더 */
-header {
-    z-index: 9999;
-    position: absolute;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 30px;
-}
-
-.logo {
-    width: 270px;
-    height: 40px;
-    border: 1px solid sandybrown;
-}
-
-
-
-/* 섹션1 */
+/* 섹션1: PC 메인 롤링 */
 .main_rolling_pc {
     height: 650px;
-    background: wheat;
+    background: rgb(255, 36, 3);
 }
-
 /* 섹션2: 인기 여행지 */
 .about_area {
     height: 685px;
-    background: linear-gradient(#fff 30%, #f4f0e9 30%);
+    background: linear-gradient(#FFF 30%, #F4F0E9 30%);
     text-align: center;
 }
-
 .about_area ul {
     display: flex;
     justify-content: center;
-    gap: 1%; /* 1920px의 1% */
+    gap: 1%;
 }
-
 .about_area li {
     width: 340px;
     height: 500px;
 }
-
+/* .about_area li:not(:first-of-type) {
+    margin-left: 2%;
+} */
 .about_area h3 {
     font-size: 18px;
     font-weight: 700;
     padding-top: 16px;
 }
-
 .about_area p {
     padding: 10px 0 24px 0;
-    margin: 0;
 }
-
 .about_area a {
-    border-top: 2px solid var(--color-gray2);
+    border-top: 2px solid var(--gray3);
     padding-top: 4px;
 }
 
-/* .about_area li:not(:first-of-type) {
-    margin-left: 2%;
-} */
-
-/* 섹션3: 상담 및 최근게시물 */
+/* 섹션3 */
 .appbbs_area {
     padding: 56px 0 136px;
+    background: white;
 }
-
+.appbbs_area .box_inner {
+    display: flex;
+}
+.notice {
+    margin-left: 60px;
+    line-height: 2;
+}
+.notice h3 {
+    font:26px 'GothicA1-Light',sans-serif;
+    margin-bottom: 8px;
+}
+.notice ul {
+    list-style: disc;
+}
 .link {
-    background: url("http://picsum.photos/id/109/200/300") no-repeat 0 0 / cover;
+    background: url("https://picsum.photos/seed/picsum/200/300") no-repeat 0 0/cover;
     padding: 48px;
 }
-
 .link a {
     display: inline-block;
     border: 2px solid #fff;
 }
-
 .link a:first-of-type {
     margin-right: 6px;
-}
-
-.appbbs_area .box_inner {
-    display: flex;
-}
-
-.notice {
-    margin-left: 40px;
-    line-height: 2;
-}
-
-.notice h3 {
-    font-family: "GothicA1-Light";
-    font-size: 26px;
-    padding: 0;
-    margin-bottom: 8px;
-}
-
-.notice ul {
-    list-style: disc;
 }
