--- a/70_pf/tourist2/css/test.css
+++ b/70_pf/tourist2/css/test.css
@@ -1,53 +1,40 @@
 @charset "utf-8";
+
 /* reset */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
 @font-face {
     font-family: 'GothicA1-Light';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/GothicA1-Light.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
 }
-
+* {
+    box-sizing: border-box;
+}
 :root {
     --gray1: #111;
     --gray3: #333;
     --gray5: #555;
 }
-
-* {
-    box-sizing: border-box;
-}
-
-body,
-h1,
-h2,
-h3,
-ul,
-p {
+body,h1,h2,h3,ul,p {
     margin: 0;
 }
-
 body {
     font: 16px/1.6 "Roboto", sans-serif;
     color: var(--gray5);
 }
-
 h2 {
     font-size: 40px;
     font-weight: 700;
     padding: 40px;
 }
-
 ul {
     padding: 0;
     list-style: none;
 }
-
 img {
     vertical-align: top;
 }
-
 a {
     text-decoration: none;
     color: var(--gray3);
@@ -59,116 +46,102 @@ a {
     margin: 0 auto;
 }
 
-/* header */
+/* 헤더 */
 header {
     z-index: 9999;
     position: absolute;
     width: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    padding-top: 8px;
+    background: rgba(0,0,0,0.5);
+    padding: 30px;
 }
-header a {
-    color: #fff;
-}
-
-/* Util Nav */
-.util {
-    text-align: right;
-    font-size: 14px;
-}
-.util a:first-of-type::after {
-    content: '|';
-    margin: 0 8px;
-}
-
-
-/* logo+GNB common */
-.nav_outer_box {
-    display: flex;
-    justify-content: space-between;
-}
-
-/* logo */
 .logo {
     width: 270px;
     height: 40px;
+    border: 1px solid #fff;
 }
 
-/* GNB */
-.gnb {
-    position: relative;
+/* 섹션1: PC 메인 롤링 */
+.main_rolling_pc {
+    height: 650px;
+    background: rgb(255, 36, 3);
 }
-
-.nav_bg {
-    position: fixed;
-    left: 0;
-    top: 110px;
-    width: 100%;
-    height: 60px;
-    opacity: 0;
-    background: rgba(250, 100, 0, 0.85);
-    transition: .5s;
-}
-.nav_bg.active {
-    opacity: 1;
-}
-
-/* 1depth */
-.main>li {
-    display: inline-block;
-}
-
-.main>li>a {
-    display: block;
-    height: 80px;
-    line-height: 80px;
-    padding-left: 100px;
-    text-align: right;
-    font-size: 18px;
-}
-
-/* 2depth */
-.sub {
-    position: absolute;
-    width: 40%;
-    top:70px;
-    opacity:0;
-    visibility: hidden;
-    transition: .5s;
+/* 섹션2: 인기 여행지 */
+.about_area {
+    height: 685px;
+    background: linear-gradient(#FFF 30%, #F4F0E9 30%);
     text-align: center;
 }
-.sub.active {
-    visibility: visible;
-    opacity:1;
+.about_area ul {
+    display: flex;
+    justify-content: center;
+    gap: 1%;
 }
-.sub li {
-    display: inline-block;
+.about_area li {
+    width: 340px;
+    height: 500px;
 }
-.sub a {
-    display: block;
-    padding: 8px 15px;
+/* .about_area li:not(:first-of-type) {
+    margin-left: 2%;
+} */
+.about_area h3 {
     font-size: 18px;
-    line-height: 60px;
+    font-weight: 700;
+    padding-top: 16px;
+}
+.about_area p {
+    padding: 10px 0 24px 0;
+}
+.about_area a {
+    border-top: 2px solid var(--gray3);
+    padding-top: 4px;
 }
 
-/* footer */
+/* 섹션3 */
+.appbbs_area {
+    padding: 56px 0 136px;
+    background: white;
+}
+.appbbs_area .box_inner {
+    display: flex;
+}
+.notice {
+    margin-left: 60px;
+    line-height: 2;
+}
+.notice h3 {
+    font:26px 'GothicA1-Light',sans-serif;
+    margin-bottom: 8px;
+}
+.notice ul {
+    list-style: disc;
+}
+.link {
+    background: url("https://picsum.photos/seed/picsum/200/300") no-repeat 0 0/cover;
+    padding: 48px;
+}
+.link a {
+    display: inline-block;
+    border: 2px solid #fff;
+}
+.link a:first-of-type {
+    margin-right: 6px;
+}
+
+/* 푸터 */
 footer {
     border-top: 1px solid #ddd;
     height: 160px;
     font-size: 13px;
 }
-
 footer .box_inner {
     display: flex;
     justify-content: space-between;
     padding: 25px 0 36px 0;
 }
-
 footer h3 {
     font-size: 14px;
     font-weight: normal;
 }
-
 /* 하단 메뉴 */
 ul.foot_list {
     display: flex;
@@ -176,16 +149,13 @@ ul.foot_list {
     font-weight: 700;
     margin-bottom: 25px;
 }
-
 .foot_list li:first-of-type::after {
     content: '|';
     padding: 0 10px;
 }
-
 .snslink {
     display: flex;
 }
-
 .snslink a {
     display: block;
     width: 50px;
@@ -193,15 +163,12 @@ ul.foot_list {
     margin: 24px;
     background: no-repeat 0 0/cover;
 }
-
 .snslink li:nth-of-type(1) a {
     background-image: url("https://picsum.photos/id/401/50/50");
 }
-
 .snslink li:nth-of-type(2) a {
     background-image: url("https://picsum.photos/id/404/50/50");
 }
-
 .snslink li:nth-of-type(3) a {
     background-image: url("https://picsum.photos/id/406/50/50");
 }
