--- a/70_pf/SRT/css/header.css
+++ b/70_pf/SRT/css/header.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
 
 #header {
+    /* 
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0; */
     width: 100%;
     height: 140px;
     background: #fff;
