--- a/70_pf/SRT/css/sub.css
+++ b/70_pf/SRT/css/sub.css
@@ -5,7 +5,7 @@
 /* 서브페이지 타이틀 */
 #title {
     position: absolute;
-    top: 140px;
+    /* top: 140px; */
     width: 100%;
     height: 150px;
 }
@@ -59,9 +59,13 @@
 .sub_inner div a {
     display: flex;
     justify-content: space-between;
-    width: 130px;
+    /* width: 130px; */
 }
 
+.sub_inner div img {
+
+    margin-left: 10px;
+}
 .sub_inner .menu {
     position: relative;
     padding: 0 15px;
@@ -83,3 +87,4 @@
     width: 1200px;
     margin: 0 auto;
 }
+
