--- a/70_pf/tourist2/css/main.css
+++ b/70_pf/tourist2/css/main.css
@@ -1,11 +1,9 @@
 @charset "utf-8";
 @import url(common.css);
+@import url(slider.css);
 
-/* 섹션1: PC 메인 롤링 */
-.main_rolling_pc {
-    height: 650px;
-    background: rgb(255, 36, 3);
-}
+
+/* 섹션1: PC 메인 롤링 - 슬라이더 부분 */
 /* 섹션2: 인기 여행지 */
 .about_area {
     height: 685px;
@@ -50,7 +48,6 @@
     line-height: 2;
 }
 .notice h3 {
-    font:26px 'GothicA1-Light',sans-serif;
     margin-bottom: 8px;
 }
 .notice ul {
@@ -58,7 +55,7 @@
 }
 .link {
     background: url("https://picsum.photos/seed/picsum/200/300") no-repeat 0 0/cover;
-    padding: 48px;
+    padding: 38px;
 }
 .link a {
     display: inline-block;
@@ -67,3 +64,4 @@
 .link a:first-of-type {
     margin-right: 6px;
 }
+
