--- a/70_pf/SRT/css/tour_best.css
+++ b/70_pf/SRT/css/tour_best.css
@@ -201,7 +201,7 @@
 
 .tour_main select {
     z-index: 2;
-    /* width: 74px; */
+    width: 90px;
     background: #eee;
     border: none;
     font-size: 12px;
@@ -209,7 +209,7 @@
     padding: 7px 10px 7px 8px;
     border-radius: 30px;
     margin-top: 8px;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     cursor: pointer;
     appearance: none;
     background-image: url(/70_pf/srt/images/sub/arrow_down_7.svg);
