--- a/70_pf/SRT/css/cs.css
+++ b/70_pf/SRT/css/cs.css
@@ -1,31 +1,11 @@
 @charset "utf-8";
+@import url("sub.css");
 
 .wrap {
     position: relative;
     width: 100%;
-    height: 1368px;
+    height: 100%;
     margin: 0 auto;
-}
-
-/* 헤더임시고정 */
-.header_container {
-    width: 100%;
-}
-
-#header {
-    width: 100%;
-    height: 140px;
-    text-align: center;
-    line-height: 140px;
-    background: #999;
-}
-
-.header_line {
-    width: 100%;
-    height: 150px;
-    text-align: center;
-    line-height: 150px;
-    background: #888;
 }
 
 /* container */
