--- a/70_pf/SRT/css/lostfound.css
+++ b/70_pf/SRT/css/lostfound.css
@@ -1,31 +1,11 @@
 @charset "utf-8";
+@import url("sub.css");
 
 .wrap {
     position: relative;
     width: 100%;
-    height: 1712px;
+    height: 100%;
     margin: 0 auto;
-}
-
-/* 헤더임시고정 */
-.header_container {
-    width: 100%;
-}
-
-#header {
-    width: 100%;
-    height: 140px;
-    text-align: center;
-    line-height: 140px;
-    background: #999;
-}
-
-.header_line {
-    width: 100%;
-    height: 150px;
-    text-align: center;
-    line-height: 150px;
-    background: #888;
 }
 
 /* container */
@@ -191,11 +171,4 @@
 
 .td_img img {
     padding-top: 5px;
-}
-
-/* 푸터 */
-.footer {
-    width: 100%;
-    height: 300px;
-    background: #555;
 }
