--- a/70_pf/SRT/css/sub.css
+++ b/70_pf/SRT/css/sub.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
-@import url("./header.css");
-@import url("./footer.css");
+@import url("/70_pf/SRT/css/header.css");
+@import url("/70_pf/SRT/css/footer.css");
 
 /* 서브페이지 타이틀 */
 #title {
-    position: absolute;
+    /* position: absolute; */
     /* top: 140px; */
     width: 100%;
     height: 150px;
