--- a/70_pf/SRT/css/sub.css
+++ b/70_pf/SRT/css/sub.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-@import url("/70_pf/SRT/css/header.css");
-@import url("/70_pf/SRT/css/footer.css");
+@import url("/w0310/70_pf/SRT/css/header.css");
+@import url("/w0310/70_pf/SRT/css/footer.css");
 
 /* 서브페이지 타이틀 */
 #title {
