--- a/70_pf/tourist2/css/join.css
+++ b/70_pf/tourist2/css/join.css
@@ -18,8 +18,9 @@
 }
 
 #join .join_form ul {
+    padding: 32px 0;
     border-top: 2px solid #333;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #ccc;
 }
 
 .join_form li {
@@ -29,10 +30,13 @@
 #join label {
     display: inline-block;
     width: 130px;
+    font-size: 17px;
+    font-weight: 700;
 }
 
 #join .required_input {
     color: #f00;
+    margin-right: 8px;
 }
 
 #join .w100p {
@@ -58,7 +62,6 @@
 }
 
 #inquiry_detail {
-    width: calc(100% - 140px);
     height: 245px;
 }
 
