--- a/70_pf/jeep/css/index.css
+++ b/70_pf/jeep/css/index.css
@@ -1,31 +1,5 @@
 @charset "utf-8";
-
-/* 상단고정헤더 */
-.header {
-    z-index: 9999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    background: #fff;
-}
-
-nav {
-    position: relative;
-}
-
-.main {
-    position: absolute;
-    top: 0;
-    left: 530px;
-    width: 910px;
-    display: flex;
-    justify-content: space-between;
-    line-height: 2;
-}
-
+@import url(/w0310/70_pf/jeep/css/header.css);
 /* 메인섹션 */
 .section {
     height: 100vh;
