--- a/70_pf/SRT/css/section2_style.css
+++ b/70_pf/SRT/css/section2_style.css
@@ -87,14 +87,14 @@
 .arrow_left {
     position: absolute;
     z-index: 1;
-    top: 360px;
+    top: 380px;
     left: 334px;
 }
 
 .arrow_right {
     position: absolute;
     z-index: 1;
-    top: 360px;
+    top: 380px;
     right: 345px;
 }
 
@@ -118,7 +118,8 @@
     position: relative;
     width: 1205px;
     overflow: hidden;
-    height: 540px;
+    height: 600px;
+    padding-top: 20px;
     margin: 0 auto;
     margin-top: 50px;
     background: #fff;
@@ -175,6 +176,17 @@
 .tour_way {
     font-size: 16px;
     color: #888;
+}
+
+.tour_carousel_contents {
+    position: relative;
+    z-index: 999;
+    transition: .3s;
+
+}
+
+.tour_carousel_contents:hover {
+    transform: translateY(-10px);
 }
 
 
