--- a/70_pf/jeep/css/header.css
+++ b/70_pf/jeep/css/header.css
@@ -7,7 +7,7 @@
 }
 
 /* 상단고정헤더 */
-.header {
+header {
     z-index: 9999;
     position: fixed;
     top: 0;
@@ -53,4 +53,67 @@ nav:hover li a {
 
 .main img {
     vertical-align: middle;
+}
+
+.logo_container {
+    position: relative;
+    height: 40px;
+    width: 100px;
+}
+
+.logo_container > a {
+    position: absolute;
+    left: 0;
+}
+
+.logo {
+    transition: 0.3s;
+    position: absolute;
+    width: 100px;
+    height: 40px;
+}
+
+.logo.default {
+    display: block;
+}
+
+.logo.hover {
+    display: none;
+}
+
+header:hover .logo.default {
+    display: none;
+}
+
+header:hover .logo.hover {
+    display: block;
+}
+
+.logo_container_2 {
+    position: relative;
+    height: 22px;
+    width: 110px;
+}
+
+.logo2 {
+    transition: 0.3s;
+    position: absolute;
+    width: 110px;
+    height: 22px;
+}
+
+.logo2.default {
+    display: block;
+}
+
+.logo2.hover {
+    display: none;
+}
+
+header:hover .logo2.default {
+    display: none;
+}
+
+header:hover .logo2.hover {
+    display: block;
 }
