--- a/70_pf/jeep/css/index.css
+++ b/70_pf/jeep/css/index.css
@@ -32,5 +32,12 @@
 .footer {
     height: 100vh;
     width: 100%;
+    text-align: center;
+    font-size: 3em;
+    color: #fff;
     background: #555;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background 0.5s;
 }
