--- a/70_pf/jeep/css/header.css
+++ b/70_pf/jeep/css/header.css
@@ -18,16 +18,21 @@ header {
     /* background: #fff; */
 }
 
+.nav_container {
+    position: relative;
+    width: 100%;
+}
+
 nav {
     position: relative;
-    width: 900px;
+    width: 910px;
     height: 100%;
     margin: 0 auto;
 }
 
 .main {
     position: absolute;
-    width: 910px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     line-height: 80px;
@@ -116,4 +121,36 @@ header:hover .logo2.default {
 
 header:hover .logo2.hover {
     display: block;
+}
+
+/* 서브메뉴 */
+
+
+.sub {
+    position: absolute;
+    width: 1906px;
+    top: 79px;
+    left: 0;
+    background: var(--whiteTextColor);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+    min-width: 200px;
+    /* 높이는 자동으로 조정됨 */
+}
+
+.nav_container li:hover .sub {
+    opacity: 1;
+    visibility: visible;
+}
+
+.submenu {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.model_container {
+    display: flex;
 }
