--- a/70_pf/dothome/karts/css/style.css
+++ b/70_pf/dothome/karts/css/style.css
@@ -80,7 +80,7 @@ header {
     display: block;
     font-size: 18px;
     font-weight: bold;
-    background: #386ed3;
+    background: #333;
     color: #fff;
     padding: 10px;
 }
