--- a/70_pf/mysite/css/main.css
+++ b/70_pf/mysite/css/main.css
@@ -1,14 +1,44 @@
 @charset "utf-8";
 
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Cafe24Meongi-W-v1.0', 'Times New Roman', Times, serif;
 }
 
-p {
-    font-family: Arial, Helvetica, sans-serif;
+p, footer a {
+    font-family: 'Pretendard-Regular', 'He;vetica',sans-serif;
+}
+
+/* hover effect */
+nav a:hover {
+    color: #111 !important;
+}
+
+nav a {
+    vertical-align: middle;
+}
+
+nav li:first-of-type ::after {
+    content: '●';
+    margin-left: 10px;
+    color: #6c757d;
+    /* vertical-align: middle; */
+
+}
+footer li:first-of-type ::after {
+    content: '｜';
+    color: #ccc;
+    margin-left: 46px;
+    /* font-size: 30px; */
+    vertical-align: middle;
+    font-family: 'Font Awesome 5 Free';
+}
+
+footer a {
+    vertical-align: middle;
 }
 
 header {
     /* background image parallex scrolling */
     background: url(/w0310/70_pf/mysite/images/bg-light.png) no-repeat 50% 50%/ cover fixed;
 }
+
