--- a/70_pf/mysite/css/main.css
+++ b/70_pf/mysite/css/main.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('reset.css');
 
 body {
     font-family: 'Cafe24Meongi-W-v1.0', 'Times New Roman', Times, serif;
@@ -19,15 +20,16 @@ nav a {
 
 nav li:first-of-type ::after {
     content: '●';
-    margin-left: 10px;
+    margin-left: 4px;
     color: #6c757d;
+    font-size: 8px;
     /* vertical-align: middle; */
 
 }
 footer li:first-of-type ::after {
     content: '｜';
     color: #ccc;
-    margin-left: 46px;
+    margin-left: 16px;
     /* font-size: 30px; */
     vertical-align: middle;
     font-family: 'Font Awesome 5 Free';
