--- a/70_pf/mysite/css/main.css
+++ b/70_pf/mysite/css/main.css
@@ -1,12 +1,21 @@
 @charset "utf-8";
-@import url('reset.css');
+@import url("/css/reset.css");
 
 body {
-    font-family: 'Cafe24Meongi-W-v1.0', 'Times New Roman', Times, serif;
+    font-family: "Cafe24Meongi-W-v1.0", "Times New Roman", Times, serif;
 }
 
-p, footer a {
-    font-family: 'Pretendard-Regular', 'He;vetica',sans-serif;
+p,
+footer a {
+    font-family: "Pretendard-Regular", "Helvetica", sans-serif;
+}
+
+.container {
+    max-width: 940px;
+}
+
+img {
+    min-width: 100px;
 }
 
 /* hover effect */
@@ -19,20 +28,21 @@ nav a {
 }
 
 nav li:first-of-type ::after {
-    content: '●';
+    content: "●";
     margin-left: 4px;
     color: #6c757d;
     font-size: 8px;
     /* vertical-align: middle; */
-
 }
-footer li:first-of-type ::after {
-    content: '｜';
-    color: #ccc;
-    margin-left: 16px;
-    /* font-size: 30px; */
-    vertical-align: middle;
-    font-family: 'Font Awesome 5 Free';
+
+@media (min-width: 796px) {
+    footer li:first-of-type ::after {
+        content: "｜";
+        color: #ccc;
+        margin-left: 4px;
+        font-size: 20px;
+        vertical-align: middle;
+    }
 }
 
 footer a {
@@ -41,6 +51,5 @@ footer a {
 
 header {
     /* background image parallex scrolling */
-    background: url(/w0310/70_pf/mysite/images/bg-light.png) no-repeat 50% 50%/ cover fixed;
+    background: url(/images/bg-light.png) no-repeat 50% 50% / cover fixed;
 }
-
