--- a/70_pf/jeep/css/reset.css
+++ b/70_pf/jeep/css/reset.css
@@ -5,7 +5,7 @@
     --mainColor: #4c2f48;
     --subColor: #C8B158;
     --mainTextColor: #333333;
-    --grayTextColor: #B5B5B6;
+    --grayTextColor: #555555;
     --whiteTextColor: #ffffff;
 
 }
@@ -19,14 +19,14 @@ body,h1,h2,h3,h4,h5,h6,p,ul,li {
 }
 
 html, body {
-    color: #333;
-    background: #fff;
+    color: var(--mainTextColor);
+    background: var(--whiteTextColor);
     font: 16px/1.6 "Noto Sans KR", sans-serif;
 }
 
 a {
     text-decoration: none;
-    color: #333;
+    color: var(--mainTextColor);
 }
 
 ul, li{
