--- a/70_pf/jeep/css/section2.css
+++ b/70_pf/jeep/css/section2.css
@@ -1,1 +1,17 @@
 @charset "utf-8";
+@import url(reset.css);
+
+.section {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background: #fff;
+    transition: background 0.5s;
+}
+
+.inner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
